--- a/portfolio.html
+++ b/portfolio.html
@@ -2,19 +2,19 @@
 <html lang="ru">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-        rel="stylesheet">
+        rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css"
         integrity="sha512-Y0MM+V6ymRKN2zStTqzQ227DWhhp4Mzdo6gnlRnuaNCbc+YN/ZH0sBCLTM4M0oSy9c9VKiCvd4Jk44aCLrNS5Q=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Document</title>
 </head>
 
@@ -22,12 +22,15 @@
     <!-- Header -->
     <header class="header">
         <div class="header-container container">
-            <a href="./index.html" class="header-logo link"><span>Web</span>Studio</a>
+            <a href="./index.html" class="header-logo link">
+                <span>Web</span>
+                Studio
+            </a>
             <!-- Navigation -->
             <nav class="header-nav">
                 <ul class="nav list">
                     <li><a href="./index.html" class="nav-link link">Студия</a></li>
-                    <li><a href="./portfolio.html" class="nav-link link current  ">Портфолио</a></li>
+                    <li><a href="./portfolio.html" class="nav-link link current">Портфолио</a></li>
                     <li><a href="./contacts.html" class="nav-link link">Контакты</a></li>
                 </ul>
             </nav>
@@ -36,12 +39,18 @@
                     <a href="mailto:info@devstudio.com" class="header-email link">
                         <svg class="header-contact-icon" width="16" height="12">
                             <use href="./images/sprites/icons.svg#icon-envelope"></use>
-                        </svg>info@devstudio.com</a>
+                        </svg>
+                        info@devstudio.com
+                    </a>
                 </li>
-                <li><a href="tel:+380991111111" class="header-tel link">
+                <li>
+                    <a href="tel:+380991111111" class="header-tel link">
                         <svg class="header-contact-icon" width="10" height="16">
                             <use href="./images/sprites/icons.svg#icon-smartphone"></use>
-                        </svg>+38 099 111 11 11</a></li>
+                        </svg>
+                        +38 099 111 11 11
+                    </a>
+                </li>
             </ul>
         </div>
     </header>
@@ -62,7 +71,7 @@
                 <ul class="project-list list">
                     <li class="project-card">
                         <a href="" class="project-card-link link">
-                            <img src="./images/portfolio/technokryak.jpg" alt="Веб-сайт Технокряк">
+                            <img src="./images/portfolio/technokryak.jpg" alt="Веб-сайт Технокряк" />
                             <div class="project-description">
                                 <h2 class="project-name">Технокряк</h2>
                                 <p class="project-type">Веб-сайт</p>
@@ -71,7 +80,7 @@
                     </li>
                     <li class="project-card">
                         <a href="" class="project-card-link link">
-                            <img src="./images/portfolio/poster.jpg" alt="Постер New Orlean vs Golden Star">
+                            <img src="./images/portfolio/poster.jpg" alt="Постер New Orlean vs Golden Star" />
                             <div class="project-description">
                                 <h2 class="project-name">Постер New Orlean vs Golden Star</h2>
                                 <p class="project-type">Дизайн</p>
@@ -80,7 +89,7 @@
                     </li>
                     <li class="project-card">
                         <a href="" class="project-card-link link">
-                            <img src="./images/portfolio/seafood_restaurant.jpg" alt="Ресторан Seafood">
+                            <img src="./images/portfolio/seafood_restaurant.jpg" alt="Ресторан Seafood" />
                             <div class="project-description">
                                 <h2 class="project-name">Ресторан Seafood</h2>
                                 <p class="project-type">Приложение</p>
@@ -89,7 +98,7 @@
                     </li>
                     <li class="project-card">
                         <a href="" class="project-card-link link">
-                            <img src="./images/portfolio/prime.jpg" alt="Проект Prime">
+                            <img src="./images/portfolio/prime.jpg" alt="Проект Prime" />
                             <div class="project-description">
                                 <h2 class="project-name">Проект Prime</h2>
                                 <p class="project-type">Маркетинг</p>
@@ -98,7 +107,7 @@
                     </li>
                     <li class="project-card">
                         <a href="" class="project-card-link link">
-                            <img src="./images/portfolio/boxes.jpg" alt="Проект Boxes">
+                            <img src="./images/portfolio/boxes.jpg" alt="Проект Boxes" />
                             <div class="project-description">
                                 <h2 class="project-name">Проект Boxes</h2>
                                 <p class="project-type">Приложение</p>
@@ -107,7 +116,7 @@
                     </li>
                     <li class="project-card">
                         <a href="" class="project-card-link link">
-                            <img src="./images/portfolio/inspiration_borders.jpg" alt="Дисплей">
+                            <img src="./images/portfolio/inspiration_borders.jpg" alt="Дисплей" />
                             <div class="project-description">
                                 <h2 class="project-name">Inspiration has no Borders</h2>
                                 <p class="project-type">Веб-сайт</p>
@@ -117,7 +126,7 @@
 
                     <li class="project-card">
                         <a href="" class="project-card-link link">
-                            <img src="./images/portfolio/limited_edition.jpg" alt="Книга">
+                            <img src="./images/portfolio/limited_edition.jpg" alt="Книга" />
                             <div class="project-description">
                                 <h2 class="project-name">Издание Limited Edition</h2>
                                 <p class="project-type">Дизайн</p>
@@ -126,7 +135,7 @@
                     </li>
                     <li class="project-card">
                         <a href="" class="project-card-link link">
-                            <img src="./images/portfolio/lab.jpg" alt="Проект LAB">
+                            <img src="./images/portfolio/lab.jpg" alt="Проект LAB" />
                             <div class="project-description">
                                 <h2 class="project-name">Проект LAB</h2>
                                 <p class="project-type">Маркетинг</p>
@@ -135,7 +144,7 @@
                     </li>
                     <li class="project-card">
                         <a href="" class="project-card-link link">
-                            <img src="./images/portfolio/growing_business.jpg" alt="Развивающийся бизнес">
+                            <img src="./images/portfolio/growing_business.jpg" alt="Развивающийся бизнес" />
                             <div class="project-description">
                                 <h2 class="project-name">Growing Business</h2>
                                 <p class="project-type">Приложение</p>
